--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2? family = Kaisei + Decol & display = swap');
 
 body {
-    background-color: rgb(8, 197, 188);
+    background-color: rgb(125, 237, 181);
 }
 
 
@@ -16,7 +16,14 @@ body {
 html {
     font-family: 'Kaisei Decol', serif;
     font-size: 63%;
-}   
+}  
+.h1 {
+    color: aliceblue;
+    text-align: center;
+    font-size: 40px;
+    background-color: rgb(253, 186, 170);
+    border-radius: 10px;
+}
 
 /* hago referncial al "div" que esta en mi archivo " index.html*/
 .container {
@@ -30,25 +37,24 @@ html {
 }
 /*llamo a las clases ".calculator", .calculator- ,.calculator*/
 .calculator {
-    background-color: rgb(255, 176, 176);
-
-
-
-
     display: flex;
     flex-direction: column; /*ordena todoen columnas*/
     width: 500px; /*ancho*/
     font-size: 3rem; /*letra*/
     border: 5px solid rgb(255, 46, 46); /*borde*/
+    border-radius: 20px;
+    background-color: rgb(255, 126, 126);
 
 }
 
 .calculator-display {
+    background-color: rgb(211, 195, 195);
     padding: 25px 15px ; /*25 arriba y abajo. 15 ala derecha e izquierda*/
     width: 100%; /*ancho*/
     text-align: right;
     border: 5px solid rgb(255, 46, 46);
     overflow-x: auto;
+    border-radius: 10px;
 }  
 
 .calculator-keypad {
@@ -60,6 +66,7 @@ html {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
+    
 
 }
 
@@ -70,6 +77,7 @@ html {
     cursor: pointer;
     background-color: white;
     border: 1px solid rgb(107, 98, 98);
+    border-radius: 100px;
 }
 
 /*para que me vaje el brillo al pasar el maus*/
@@ -88,5 +96,5 @@ html {
 }
 
 .keypad-button.dark {
-    background-color:lightgray;
+    background-color:yellow;
 }
